syntax = "proto3";

package max;
option go_package="maxpb";

message maxRequest{
    int64 num=1;
}

message maxResponse{
    int64 max_num=1;
}

service max {
    rpc GetMax(stream maxRequest) returns (stream maxResponse) {}
}
